@@ -14,6 +14,3 @@ dist/
 __pycache__/
 *.so
 *~
-
-#### Sphinx
-docs/_build
